<resources>
    <string name="app_name">Football Scout</string>
    <string name="continueButton">Продолжить игру</string>
    <string name="newGameButton">Новая игра</string>
    <string name="loadScreenImageDescription">the image on the load screen</string>
    <string name="imageTextLayoutDescription">Image in recycle or swipe View</string>
    <string name="title_activity_game">" "</string>
    <string name="title_home">Профиль</string>
    <string name="title_dashboard">Задачи</string>
    <string name="title_search">Поиск</string>
    <string name="forward_image_description">Forward image</string>
    <string name="central_midfield_image_description">Central midfield image</string>
    <string name="central_attacking_midfielder_image_description">Central attacking midfielder image</string>
    <string name="right_attacking_midfielder_image_description">Right attacking midfielder image</string>
    <string name="left_attacking_midfielder_image_description">Left attacking midfielder image</string>
    <string name="left_defender_image_description">Left defender image</string>
    <string name="center_defender_image_description">Center defender image</string>
    <string name="right_defender_image_description">Right defender image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_last_name">Last Name</string>
    <string name="default_position">АПЛ</string>
    <string name="default_right_text">Анализ</string>
    <string name="explore_picture_description">explore picture</string>
    <string name="default_left_text">Рекомендовать</string>
    <string name="recommend_image_description">recommend image</string>
    <string name="default_skill">20</string>
    <string name="physic_skill_title_default">PHY</string>
    <string name="defender_skill_title_default">DEF</string>
    <string name="forward_skill_title_default">ATC</string>
    <string name="age_title_default">AGE</string>
    <string name="position_title_default">POS</string>
    <string name="last_name_title_default">Last Name</string>
    <string name="default_energy_title">Energy: 20</string>
    <string name="default_button_text">next off-season</string>
    <string name="players_progress_default">Players progress</string>
    <string name="image_progress">image progress</string>
    <string name="just_image">just image</string>
</resources>
