<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/last_name_title_default"
        android:textSize="20sp"
        android:paddingStart="@dimen/name_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/position_title"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/position_title_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/age_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age_title"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/age_title_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/attack_title"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/attack_title"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/forward_skill_title_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/defender_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/defender_title"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/defender_skill_title_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/physic_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/physic_title"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/physic_skill_title_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        tools:context="ru.zagorulko.footballscout.TeamActivity"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="0dp">


    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>