<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/progress_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/players_progress_default"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:paddingTop="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="65dp" />


    <TextView
        android:id="@+id/progress_energy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/default_energy_title"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/default_button_text"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>